# LibRtmp-Client-for-Android

./: .gitignore  README.md  build.gradle  settings.gradle
RtmpClient/: build.gradle  proguard-rules.pro
RtmpClient/src/androidTest/java/net/butterflytv/rtmp_client/rtmpclient/: ApplicationTest.java
RtmpClient/src/main/java/net/butterflytv/rtmp_client/: RtmpClient.java
RtmpClient/src/test/java/net/butterflytv/rtmp_client/rtmpclient/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rtmp-client/: CMakeLists.txt  build.gradle
rtmp-client/src/main/: AndroidManifest.xml
rtmp-client/src/main/cpp/: librtmp-jni.c  librtmp-jni.h  rtmpmuxer.c
rtmp-client/src/main/cpp/flvmuxer/: xiecc_rtmp.c  xiecc_rtmp.h
rtmp-client/src/main/cpp/librtmp/: log.c  parseurl.c  rtmp.c  rtmp.h
rtmp-client/src/main/java/io/antmedia/rtmp_client/: RTMPMuxer.java  RtmpClient.java
rtmp-client/src/main/java/net/butterflytv/rtmp_client/: RTMPMuxer.java  RtmpClient.java
rtmp-client/src/main/jni/: librtmp-jni.c  librtmp-jni.h  rtmpmuxer.c
rtmp-client/src/main/jni/flvmuxer/: xiecc_rtmp.c  xiecc_rtmp.h
test/: build.gradle  proguard-rules.pro
test/src/androidTest/java/io/antmedia/rtmp_client/test/: ApplicationTest.java
test/src/androidTest/java/net/butterflytv/rtmp_client/test/: ApplicationTest.java
test/src/main/: AndroidManifest.xml
test/src/main/java/io/antmedia/rtmp_client/test/: MainActivity.java
test/src/main/java/net/butterflytv/rtmp_client/test/: MainActivity.java
test/src/main/res/layout/: activity_main.xml
